# tauri-ignore-mouse-events-forward

./: package.json  pnpm-lock.yaml  postcss.config.mjs  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hook_sub.rs  lib.rs  main.rs  mouse_event.rs
src-tauri/sub_dll/: Cargo.toml
src-tauri/sub_dll/src/: lib.rs
